# Phi-AI-Agent-Orchestation

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml  pdf_content.txt  pyproject.toml  render.yaml
Filesss/: ADVANCEMENT_COMPLETE.md  AGENT_INTEGRATION_LAYER.md  ALIGNMENT_IMPROVEMENT_SUMMARY.md  ALIGNMENT_STATUS.md  ALIGNMENT_SUMMARY.md  ALIGNMENT_VISUALIZATION.mmd  ARCHITECTURAL_ANALYSIS.md  ARTEFACT_GENERATE.md  ARTIFACT_VIEWER_FIX.md  ARTIFACT_VIEWER_PATHS.md  AUTHORITATIVE_INVARIANTS.md  AUTO_PORT_DETECTION.md  BROWSER_VERIFICATION.md  COMM_EVT_READINESS.md  COMPONENT_MAPPING.md  CONTENT_INTERACTION_ARCHITECTURE.mmd  CONTENT_INTERACTION_PLAN.md  CONTINUATION_EXECUTION_SUMMARY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS (1).md  DIAGRAM_DESIGN_ANALYSIS.md  DIAGRAM_DESIGN_FEEDBACK_SUMMARY.md  DIAGRAM_IMPROVEMENTS_APPROVED.md  DIAGRAM_IMPROVEMENTS_COMPLETE.md  DIAGRAM_IMPROVEMENT_IMPLEMENTATION.md  DIRECTORY_STRUCTURE.md  EXECUTE_NOW.md  EXECUTION_COMPLETE.md  EXECUTION_LOG.md  EXECUTION_REPORT.md  EXECUTION_SUMMARY.md  FIXES_AND_TESTING.md  FRONTEND_DESIGN_IMPROVEMENTS_COMPLETE.md  FRONTEND_DESIGN_IMPROVEMENT_PLAN.md  FRONTEND_EXECUTION_WORKFLOW.md  FRONTEND_IMPLEMENTATION_STATUS.md  FRONTEND_IMPROVEMENT_PLAN (1).md  FRONTEND_IMPROVEMENT_PLAN.md  GOVERNANCE_REFACTOR.md  HOSTING_SETUP.md  (+101 more)
agents/: __init__.py
agents/analysis/: __init__.py  agent.py  main.py
agents/base/: __init__.py  agent.py
agents/content/: __init__.py  agent.py  main.py
agents/distribution/: __init__.py  agent.py  main.py
agents/feedback/: __init__.py  agent.py  main.py
agents/monitoring/: __init__.py  agent.py  main.py
agents/strategy/: __init__.py  agent.py  main.py
agents/tactics/: __init__.py  agent.py  main.py
api/: main.py
api/routes/: agents.py  campaigns.py  content.py  diagrams.py  documents.py  intelligence.py  legislative.py  legislators.py  metrics.py  orchestration.py  settings.py
core/: __init__.py
core/config/: __init__.py  settings.py
core/database/: __init__.py  connection.py  models.py
core/llm/: __init__.py  client.py
core/messaging/: __init__.py  kafka_client.py
core/security/: __init__.py  encryption.py
core/settings/: __init__.py  (+1 more)
dashboard/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
docker/: Dockerfile.agent  Dockerfile.api  Dockerfile.dashboard
migrations/: env.py
(+33 files in other folders)
