[project]
name = "advocacy-orchestration"
version = "1.0.0"
description = "Production-grade multi-agent AI orchestration system for grassroots lobbying"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core AI/LLM
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "langgraph>=0.0.20",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "tiktoken>=0.5.0",
    
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "strawberry-graphql>=0.217.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    
    # Database
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "neo4j>=5.16.0",
    "redis>=5.0.0",
    
    # Message Queue
    "aiokafka>=0.10.0",
    "confluent-kafka>=2.3.0",
    
    # HTTP & Scraping
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    "playwright>=1.41.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "feedparser>=6.0.0",
    
    # Social Media APIs
    "tweepy>=4.14.0",
    "praw>=7.7.0",
    
    # Email & Communication
    "sendgrid>=6.11.0",
    "twilio>=8.12.0",
    
    # Data Processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # NLP & ML
    "transformers>=4.37.0",
    "sentence-transformers>=2.3.0",
    "spacy>=3.7.0",
    "nltk>=3.8.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "croniter>=2.0.0",
    "apscheduler>=3.10.0",
    "boto3>=1.34.0",
    "minio>=7.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
    "faker>=22.0.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
